--- a/index.html
+++ b/index.html
@@ -376,12 +376,16 @@
             margin-bottom: 24px;
             box-shadow: var(--shadow-sm);
             border: 1px solid rgba(148, 163, 184, 0.08);
-            transition: all var(--transition-fast);
+            transition: box-shadow var(--transition-slow), transform var(--transition-slow), border-color var(--transition-fast);
         }
 
         .card:hover {
             box-shadow: var(--shadow-md);
             transform: translateY(-2px);
+        }
+
+        .card:active {
+            transform: translateY(1px) scale(0.98);
         }
 
         [data-theme="dark"] .card {
@@ -885,6 +889,7 @@
             border: none;
             font-family: inherit;
             cursor: pointer;
+            touch-action: manipulation;
         }
 
         .btn {
@@ -897,8 +902,13 @@
             font-weight: 600;
             border: 1px solid transparent;
             box-shadow: var(--shadow-sm);
-            transition: transform var(--transition-fast), box-shadow var(--transition-fast), background var(--transition-fast), color var(--transition-fast), border-color var(--transition-fast), filter var(--transition-fast);
+            transition: transform var(--transition-slow), box-shadow var(--transition-slow), background var(--transition-fast), color var(--transition-fast), border-color var(--transition-fast), filter var(--transition-fast);
             text-shadow: 0 1px 1px rgba(15, 23, 42, 0.25);
+            touch-action: manipulation;
+        }
+
+        .btn:active {
+            transform: translateY(1px) scale(0.98);
         }
 
         .btn--block {
@@ -938,7 +948,7 @@
         }
 
         .btn--primary:active {
-            transform: translateY(0);
+            transform: translateY(1px) scale(0.98);
         }
 
         .btn--secondary {
@@ -962,7 +972,7 @@
         }
 
         .btn--secondary:active {
-            transform: translateY(0);
+            transform: translateY(1px) scale(0.98);
             box-shadow: var(--shadow-xs);
         }
 
@@ -987,7 +997,7 @@
         }
 
         .btn--ghost:active {
-            transform: translateY(0);
+            transform: translateY(1px) scale(0.98);
             box-shadow: var(--shadow-xs);
         }
 
@@ -1009,7 +1019,7 @@
         }
 
         .btn--danger:active {
-            transform: translateY(0);
+            transform: translateY(1px) scale(0.98);
         }
         
         .table-container {
@@ -1128,9 +1138,12 @@
             font-size: 1rem;
             padding: 8px;
             margin-right: 4px;
+            min-width: 44px;
+            min-height: 44px;
             border-radius: var(--radius-sm);
             color: var(--text-muted);
             transition: all var(--transition-fast);
+            touch-action: manipulation;
         }
 
         .btn-icon-action:hover {
@@ -1237,6 +1250,8 @@
             align-items: center;
             justify-content: center;
             height: 100%;
+            min-width: 44px;
+            min-height: 44px;
             color: var(--text-muted);
             font-size: 0.7rem;
             gap: 4px;
@@ -1245,6 +1260,7 @@
             font-weight: 500;
             transition: all var(--transition-fast);
             position: relative;
+            touch-action: manipulation;
         }
 
         .mob-link i {
@@ -1306,6 +1322,7 @@
             z-index: 100;
             transition: all var(--transition-fast);
             border: none;
+            touch-action: manipulation;
         }
 
         .fab:hover {
